syntax = "proto3";

//option csharp_namespace = "gRPCServer_Lib";

package protobuf.greet;
option php_metadata_namespace = "Protobuf\\Greet";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}
